# Ourochronos

./: Cargo.toml  README.md
docs/: foundations.md  gap_analysis.md  guide.md  name.md  ourochronos_addendum.md  ourochronos_addendum_ii.md  ourochronos_specification.md  philosophy.md  specification.md  standard.md  theory.md
examples/: bootstrap.ouro  combinators.ouro  effects.ouro  fibonacci.ouro  hello.ouro  primality.ouro  procedures.ouro  quantum_suicide.ouro  recursion.ouro  sat.ouro  sqrt.ouro  strings.ouro  temporal_sort.ouro
examples/modules/: app.ouro  math_lib.ouro
src/: action.rs  analysis.rs  aot.rs  ast.rs  core_types.rs  debugger.rs  determinism_tests.rs  jit.rs  lib.rs  lsp.rs  main.rs  memo.rs  optimizer.rs  parser.rs  property_tests.rs  provenance.rs  repl.rs  smt_encoder.rs  stdlib.rs  tests.rs  timeloop.rs  types.rs  vm.rs
