[package]
name = "ourochronos"
version = "0.2.0"
edition = "2021"
authors = ["OUROCHRONOS Project"]
description = "A closed timelike curve programming language"
license = "MIT"

[dependencies]
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1.16", optional = true }

[features]
default = []
smt = []
parallel = ["rayon", "num_cpus"]

[[bin]]
name = "ourochronos"
path = "src/main.rs"
